# buddys-adventure

./: .gitmodules  CMakeLists.txt
src/: act.c  act.h  actor_boss.c  actor_player.c  actor_sarg.c  actor_troo.c  gam.c  gam.h  game.c  game.h  gfx.c  gfx.h  map.c  map.h  yin.c  yin.h
